# textspotter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build-debug.bat  pyproject.toml
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  main.cpp
c_bindings/: CMakeLists.txt
c_bindings/include/: c_bind.hpp
c_bindings/src/: c_bind.cpp
dnn/: .gitignore  README.md
doc/: windows-build.md  windows-run.md  windows-setup.md  windows-vcpkg.md
include/textspotter/: textspotter.hpp
lib4c/: CMakeLists.txt  lib4c.cpp
lib4c/include/: lib4c.hpp
python/: main.py
src/: textspotter.cpp  textspotter_bindings.cpp
src/textspotter/: __init__.py
tests/: CMakeLists.txt
tests/utility/: case_conversion_test.cpp  levenshtein_distance_test.cpp  load_image_test.cpp  rect_center_test.cpp  utility_test.cpp
textspotter/: CMakeLists.txt
textspotter/include/textspotter/: detect_read.hpp  east_detector.hpp  ocr.hpp  result_type.hpp  text_detection.hpp  text_matching.hpp  textspotter.hpp  utility.hpp
textspotter/src/: detect_read.cpp  east_detector.cpp  ocr.cpp  text_detection.cpp  text_matching.cpp  textspotter.cpp  utility.cpp
tools/benchmark/: CMakeLists.txt  benchmark.cpp  main.cpp
tools/detect_text/: CMakeLists.txt  main.cpp
tools/interactive_match/: CMakeLists.txt  main.cpp
tools/textspotter_cli/: CMakeLists.txt  main.cpp
